objects/MPW_SRAM_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>TEXT(Process_Type__r.Geometry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW_External_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MPW_Config_Settings__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Process</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MPW_Config_Settings__c</referenceTo>
        <relationshipLabel>MPW SRAM Configuration</relationshipLabel>
        <relationshipName>MPW_SRAM_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MPW SRAM Configuration</label>
    <listViews>
        <fullName>All_SRAM</fullName>
        <columns>NAME</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Type__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All SRAM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X28nm</fullName>
        <columns>NAME</columns>
        <columns>Geometry__c</columns>
        <columns>Process_Type__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>28nm</value>
        </filters>
        <label>28nm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SRAM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW SRAM Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>